PCAI-153 Унифицировать ChatMessage-контракт для /proceed и истории + foundation для tools
* /proceed теперь возвращает ProceedResponse { chatId, messages: ChatMessageDto[] } —
  тот же DTO, что и GET /chats/{id}/messages. USER и ASSISTANT идут через один envelope.
* meta.type=mixed снесён полностью (DTO, enum, payload-поля text/reasoning/extra),
  миграция 014 сворачивает старые mixed-записи в cards с полиморфным items[].
* MessageItemDto — sealed interface с дискриминатором kind: game, reasoning, text.
  text-item появился под составные ответы после tool-цикла.
* Foundation для следующего релиза (LangChain/tools): MessageToolCallPayloadDto,
  MessageToolResultPayloadDto, factory-методы toolCall/toolResult/textItem,
  validator расширен ASSISTANT/tool_call и TOOL/tool_result. Pipeline пока не
  генерит tool_*-сообщения, но storage и валидация уже совместимы.
* Снесён legacy: PipelineContext.responseSnapshot, PipelineSupport.extractSnapshot,
  AiCallStep теперь поднимает сохранённое сообщение из БД при идемпотентном дубле.
  Хардкод "Received N recommendations" в response.recommendation тоже удалён.
* Документация (api-contract.md, chat-message-meta.examples.md) синхронизирована,
  §6 фиксирует roadmap reserved kinds (profile_review, clarifying_question,
  quick_replies) и tool_*-типов.

Закрывает остаточный долг от PCAI-141.